# AWS_IoTCore

./: .gitignore  FAQ.md  README.md  deploy.sh  set_up.sh  swagger.yml  template.yml
.devcontainer/: Dockerfile  setup.sh
Commands/: README.md  deploy.sh  device_mqtt.py  mqtt3.py  template.yml  test_commands.py
Device-provisioning/: README.md  ways-to-provision.md
Device-provisioning/bulk-registration-using-csr/: README.md  deploy.sh  template.yml
Device-provisioning/fleet-provisioning/: README.md  client.py  command_line_utils.py  deploys.sh  do.sh  fleetprovisioning.py  iotidentity_wrapper.py  mqtt_client_wrapper.py  template.yml
Device-provisioning/fleet_provisioning_by_claim/: README.md  client.py  deploy.sh  template.yml
Device-provisioning/just-in-time-provisioning/: README.md  client.py  client.sh  deploy.sh  mqtt3.py  template.yml
Device-provisioning/just-in-time-registration/: README.md  ca_default.sh  ca_sni_only.sh  deploy.sh  template.yml
Device/cpp/: CMakeLists.txt  Dockerfile  build.sh  do.sh  setup.sh
Device/cpp/src/: CMakeLists.txt  build.sh  main.cpp
Device/python/: Dockerfile  do.sh  sample.py
FAQ/: Architecture.md  Auth.md  MQTT.md  Shadow.md
Fleet-Indexing/: README.md  STRUCTURE.md
Fleet-Indexing/aggregation-queries/: README.md  test-queries.sh
Fleet-Indexing/fleet-metrics/: README.md  cleanup.sh  deploy.sh
Fleet-Indexing/managing-index/: README.md  deploy.sh  fleet_indexing.py  template.yml
Fleet-Indexing/query-examples/: README.md  test-queries.sh
Jobs/: README.md  create_jobs.py  deploy.sh  do.sh  template.yml  update_jobs.py
Jobs/api-operations/: README.md
Jobs/devices-and-jobs/: README.md
Jobs/managing-jobs/: README.md  create_job.py
Jobs/template/: README.md  create.py  deploy.sh  device_api.py  device_mqtt.py  template.yml
MQTT-based-file-delivery/: README.md  create-stream.json
MQTT/Protocols/: README.md
Manage-devices/: README.md  config.sh  create.py  delete.sh  dynamic_group.sh  search.sh
Managing-devices/: init.sh
Shadows/: README.md
aws-iot-device-sdk-python-v2/: README.md  mqtt3.py  mqtt5.py
certificates/: README.md  ca_cli.sh  client_cli.sh
cpp/: README.md
rules/: basic-ingest.md
(+73 files in other folders)
